# cut_mpm

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  cut_cell.cpp  cut_cell.h  cut_mesh.cpp  cut_mesh.h  half_edge.cpp  half_edge.h  main.cpp  mpm.cpp  mpm.h  mpm_config.h
.github/workflows/: cmake.yml
data/: polygon0  polygon1
